<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/_20sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/alias_layout"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/alias_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/avatar"
                app:civ_border="false" />

            <ImageView
                android:id="@+id/icon_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/ic_baseline_photo_camera_24" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/signup_first_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@drawable/input_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/signup_last_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@drawable/input_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:paddingStart="@dimen/_16ssp"
                android:paddingEnd="@dimen/_16ssp"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/input_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/prompt_password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/input_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/re_enter_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <androidx.constraintlayout.utils.widget.MotionButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/button_bg"
                android:text="@string/action_sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/signup_progress"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/sign_in_page_navigator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_20sdp"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</ScrollView>