<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProfileActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/_20ssp" />

    <TableRow
        android:id="@+id/table_row_id"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/primary_light" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:id="@+id/profile_image_view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_14sdp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@mipmap/ic_launcher"
        app:civ_border="true"
        app:civ_border_color="@color/cardview_light_background"
        app:civ_border_width="1dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_name_text_view"
        app:drawableStartCompat="@drawable/ic_round_person_24"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:textAppearance="@style/MaterialAlertDialog.Material3.Title.Text"
        android:textAlignment="viewStart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_email_text_view"
        app:drawableStartCompat="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/_10sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:textAppearance="@style/MaterialAlertDialog.Material3.Title.Text"
        android:textAlignment="viewStart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fcm_token_text_view"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_13sdp"
        app:drawableStartCompat="@drawable/ic_baseline_check"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/fcm_token_available"
        android:textSize="@dimen/_12ssp"
        android:textAlignment="viewStart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fcm_warn"
        android:textSize="@dimen/_9ssp"
        android:paddingStart="@dimen/_48sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:textAlignment="viewStart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verification_email_text_view"
        android:layout_marginTop="@dimen/_13sdp"
        android:textAlignment="viewStart"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:textSize="@dimen/_13ssp" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_30sdp"
        android:layout_gravity="end">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/refresh_button"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_baseline_refresh_24"
            android:background="@color/icon_background2" />

    </androidx.cardview.widget.CardView>

</LinearLayout>



























