<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@mipmap/bg"
    tools:context=".activities.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_baseline_arrow_back_24"
        app:logoDescription="back">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/chat_image"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="3dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/chat_image"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chat_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/chat_user_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="13sp"
                    android:text="@string/online"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/chat_toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/chat_message_edittext"
            android:layout_alignParentTop="true"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:visibility="invisible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:stackFromEnd="true" />

        <ProgressBar
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:id="@+id/progress_bar"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <androidx.cardview.widget.CardView
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/chat_msg_send_card"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/teal_700"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/chat_msg_send_button"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_send_24"
                android:contentDescription="@string/send_button"
                android:saveEnabled="true" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/chat_msg_send_card"
            android:id="@+id/chat_message_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/chat_edittext_bg"
            android:hint="@string/message"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="18dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

</RelativeLayout>























